--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "gsap": "^3.12.2",
+    "postprocessing": "^6.33.2",
     "three": "^0.157.0",
     "three-css3drenderer": "^1.0.1",
     "three-good-godrays": "^0.4.4"
