--- a/package.json
+++ b/package.json
@@ -14,9 +14,8 @@
   },
   "dependencies": {
     "gsap": "^3.12.2",
-    "postprocessing": "^6.33.2",
-    "three": "^0.138.0",
-    "three-css3drenderer": "^1.0.1",
+    "postprocessing": "6.0",
+    "three": "^0.157.0",
     "three-good-godrays": "^0.4.4"
   }
 }
