--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
   },
   "dependencies": {
     "gsap": "^3.12.2",
-    "postprocessing": "6.0.0",
-    "three": "^0.140.0",
+    "postprocessing": "^6.28.7",
+    "three": "^0.144.0",
     "three-good-godrays": "^0.4.4"
   }
 }
