--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "vite-plugin-string": "^1.2.1"
   },
   "dependencies": {
+    "cannon-es": "^0.20.0",
     "gsap": "^3.12.2",
     "three": "^0.157.0"
   }
